Palm archive dump utility ... works for datebook archives

--- a/Dumpers/Makefile
+++ b/Dumpers/Makefile
@@ -15,7 +15,7 @@ clean:
 clobber: 
 	rm -f $(PGMS) *.o
 
-palm_datebook_dump: main.o datebook.o palmarchive.o appt.o
+palm_datebook_dump: main.o datebook.o palmarchive.o appt.o memo.o todo.o addrs.o
 	$(CC) $(GDB) -o $@ $^
 
 datebook.o: datebook.cpp palmarchive.h appt.h
@@ -25,3 +25,9 @@ palmarchive.o: palmarchive.cpp palmarchive.h
 main.o: main.cpp palmarchive.h
 
 appt.o:: appt.cpp appt.h
+
+memo.o:: memo.cpp palmarchive.h
+
+todo.o:: todo.cpp palmarchive.h
+
+addrs.o:: addrs.cpp palmarchive.h
